--- a/src/styles.css
+++ b/src/styles.css
@@ -6,15 +6,23 @@ body {
   background-color: rgb(40, 40, 40);
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+}
+
+main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+}
+
+main * {
+  font-size: 1rem;
 }
 
 #tag-line {
   font-style: italic;
-  margin: 15px auto 45px;
+  color:#a6a4b6;
+  margin: 15px auto 40px;
 }
 
 #input-form {
@@ -43,10 +51,20 @@ body {
   margin: 5px;
 }
 
+hr {
+  color: white;
+  border-style: solid;
+  margin: auto;
+}
+
 .number-options {
   display: flex;
   flex-direction: column;
   margin: 5px;
+}
+
+.negative-sign {
+  margin: auto;
 }
 
 #operator-div {
@@ -54,7 +72,7 @@ body {
 }
 
 #operator {
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 #calculate-div {
