Position the negative signs more naturally

--- a/src/styles.css
+++ b/src/styles.css
@@ -107,8 +107,12 @@ hr {
   margin: 5px;
 }
 
+.sign-and-int {
+  display: flex;
+}
+
 .negative-sign {
-  margin: auto;
+  margin: 10px;
 }
 
 #operation-div {
